setting up design

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,33 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  font-size: 20px;
+}
+
+header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    max-width: 1440px;
+    margin: auto;
+    border-bottom: 1px solid rgb(0,0,0,0.1);
+
+    .logo-holder {
+        display: flex;
+        padding: 10px;
+        .logo {
+            .logo-text {
+
+            }
+        }
+    }
+
 }
