--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ header {
     .logo-holder {
         display: flex;
         padding: 10px;
+        align-items: center;
+        font-weight: 600;
+        color: var(--base-800);
+
         .logo {
             display: flex;
             align-items: center;
@@ -57,11 +61,13 @@ header {
             width: 64px;
             margin-right: 20px;
             border-radius: 50%;
-
-            .logo-text {
-
-            }
         }
+            .logo-text {
+                flex: 1;
+            }
     }
 
+    nav {
+        display: flex;
+    } 
 }
