styling the header & nav

--- a/styles.css
+++ b/styles.css
@@ -69,5 +69,45 @@ header {
 
     nav {
         display: flex;
+        align-items: center;
+        ul {
+            display: flex;
+            list-style-type: none;
+            gap: 5px;
+            li {
+                display: inline-block;
+                a {
+                    display: inline-block;
+                    padding: 10px 20px;
+                    color: var(--base);
+                    &:hover {
+                        background-color: var(--base-100);
+                        border-radius: 10px;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+        .mobile-toggle {
+            display: none;
+            color: var(--base-800);
+            padding: 10px;
+            @media (max-width: 768px) {
+                display: inline-block;
+                position: absolute;
+                top: 20px;
+                right: 20px;
+            }
+        }
     } 
+
+    @media (max-width: 768px) {
+        nav {
+            ul {
+                display: none;
+            }
+
+        }
+    }
+
 }
